manifests/dev.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: __APPNAME
  namespace: __NAMESPACE
  labels:
    app: __APPNAME
spec:
  selector:
    matchLabels:
      app: __APPNAME
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      namespace: __NAMESPACE
      labels:
        app: __APPNAME
    spec:
      containers:
      - name: __APPNAME
        image: obvious.azurecr.io/__CONTAINER_IMAGE
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "600Mi"
            cpu: "200m"
          limits:
            memory: "1Gi"
            cpu: "500m"
---

apiVersion: v1
kind: Service
metadata:
  name: __APPNAME
  namespace: __NAMESPACE
  labels:
    app: __APPNAME
spec:
  type: ClusterIP
  selector:
    app: __APPNAME
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 80
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "X-Forwarded-For $remote_addr";
  name: __APPNAME
  namespace: __NAMESPACE
spec:
  tls:
  - hosts:
    - __APPURL
    secretName: obvious-cert
  rules:
  - host: __APPURL
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: __APPNAME
            port:
              number: 80
